--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 		<meta property="og:site_name" content="Zoey Sugerman-Brozan" />
   </head>
   <body>
-    <h1>↓ See my website here ↓</h1>
-    <a href="https://people.rit.edu/zfs5725/"><button>Zoey Sugerman-Brozan</button></a>
+	  <div>
+		  <h1>↓ See my website here ↓</h1>
+		  <h2><a href="https://people.rit.edu/zfs5725/">Zoey Sugerman-Brozan</a></h2>
+	  </div>
   </body>
