--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta property="og:site_name" content="Zoey Sugerman-Brozan" />
   </head>
   <body>
-	  <div>
+	  <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; margin: auto;">
 		  <h1>↓ See my website here ↓</h1>
 		  <h2><a href="https://people.rit.edu/zfs5725/">Zoey Sugerman-Brozan</a></h2>
 	  </div>
